# seal-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/media/: audio.rs  image.rs  mod.rs  video.rs
src/watermark/: dct.rs  dwt.rs  mod.rs  trait.rs
