[package]
name = "seal"
version = "0.1.0"
edition = "2021"
description = "A digital watermarking tool for images and media files"
authors = ["Media Seal RS Team"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
hound = "3.5"
ndarray = "0.15"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdct = "0.7"
ffmpeg-sidecar = { version = "2.0", features = ["download_ffmpeg"] }
colored = "2.0"
indicatif = "0.17"
